force-app/main/default/objects/cgcloud__Promotion_Attachment__c/cgcloud__Promotion_Attachment__c.object-meta.xml
<CustomObject>
    <description>Pictures added as attachments to promotion.</description>
    <label>Promotion Attachment</label>
    <nameField>
        <label>Promotion Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Attachment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>