force-app/main/default/objects/cgcloud__Promotion_Attachment__c/fields/cgcloud__Size__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Size__c</fullName>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>