force-app/main/default/objects/cgcloud__Promotion_Attachment__c/fields/cgcloud__Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>