force-app/main/default/objects/cgcloud__Promotion_Attachment__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>